增加复制文本指令

--- a/app/main/style.less
+++ b/app/main/style.less
@@ -25,6 +25,10 @@ app {
         &>span {
             font-size: 14px;
         }
+        >button{
+            float: right;
+            font-size: 14px;
+        }
     }
 }
 
