--- a/app/main/style.less
+++ b/app/main/style.less
@@ -13,7 +13,7 @@ body {
 
 app {
     width: 500px;
-    margin: 0 auto;
+    margin: 20px auto;
     display: block;
     overflow: hidden;
     text-align: left;
